prusti-tests/tests/parse/ui/foreign_mods.stderr
error[E0308]: mismatched types
 --> $DIR/foreign_mods.rs:5:26
  |
5 |     #[ensures(a >= b ==> result = a)]
  |                          ^^^^^^ expected `bool`, found `i32`

error[E0308]: mismatched types
 --> $DIR/foreign_mods.rs:5:22
  |
5 |     #[ensures(a >= b ==> result = a)]
  |                      ^^^^^^^^^^^^^^ expected `bool`, found `()`
  |
help: you might have meant to compare for equality
  |
5 |     #[ensures(a >= b ==> result == a)]
  |                                  +

error[E0308]: mismatched types
  --> $DIR/foreign_mods.rs:12:26
   |
12 |     #[ensures(a >= 0 ==> result = a)]
   |                          ^^^^^^ expected `bool`, found `i32`

error[E0308]: mismatched types
  --> $DIR/foreign_mods.rs:12:22
   |
12 |     #[ensures(a >= 0 ==> result = a)]
   |                      ^^^^^^^^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to compare for equality
   |
12 |     #[ensures(a >= 0 ==> result == a)]
   |                                  +

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
